# or-scheduling

./: .gitignore  README.md  pyproject.toml
notebooks/: Exploration.ipynb  visualizations.ipynb
scheduler/: solver.py
tests/: test_basic.py  test_constraints.py
